[package]
name = "modseclog"
authors = ["Christian Göttsche <cgzones@googlemail.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Introspection of ModSecurity log files"
categories = ["command-line-utilities", "security", "visualization"]
keywords = ["modsecurity", "logging", "apache", "WAF"]
repository = "https://github.com/cgzones/modseclog"
exclude = [".github/", ".gitignore", "TODO", "_typos.toml"]


[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
flate2 = "1.1.0"
fuzzy-matcher = "0.3.7"
hashbrown = "0.16.0"
ipnet = "2.11.0"
ratatui = "0.29"
ratatui-explorer = "0.2.1"
regex = "1.11.1"
time = { version = "0.3.46", features = ["formatting", "macros", "parsing"] }


[profile.release]
lto = true
strip = true
codegen-units = 1
panic = 'abort'


[profile.profiling]
inherits = 'release'
lto = 'thin'
codegen-units = 16
strip = false
debug = 1
panic = 'abort'


[lints.rust]
elided_lifetimes_in_paths = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "forbid"
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_must_use = "warn"

[lints.clippy]
allow_attributes = "warn"
as_underscore = "warn"
assigning_clones = "warn"
branches_sharing_code = "warn"
cargo_common_metadata = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
clone_on_ref_ptr = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
decimal_literal_representation = "warn"
derive_partial_eq_without_eq = "warn"
disallowed_types = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
fallible_impl_from = "warn"
fn_to_numeric_cast_any = "warn"
future_not_send = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_regex = "deny"
items_after_statements = "warn"
large_stack_frames = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
literal_string_with_formatting_args = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
missing_asserts_for_indexing = "warn"
mixed_read_write_in_expression = "warn"
multiple_unsafe_ops_per_block = "warn"
must_use_candidate = "warn"
mut_mut = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
non_ascii_literal = "warn"
non_send_fields_in_send_ty = "warn"
non_zero_suggestions = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
panic = "deny"
path_buf_push_overwrite = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
set_contains_or_insert = "warn"
significant_drop_in_scrutinee = "warn"
significant_drop_tightening = "warn"
similar_names = "warn"
stable_sort_primitive = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
tests_outside_test_module = "warn"
trait_duplication_in_bounds = "warn"
trivial_regex = "warn"
try_err = "warn"
type_repetition_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
unicode_not_nfc = "deny"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unreadable_literal = "deny"
unused_peekable = "warn"
unused_result_ok = "warn"
unused_rounding = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
use_debug = "warn"
use_self = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
